--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <span class="dot"></span>
             </div>
         </div>
+        <p class="tester"></p>
 
         <script src="script.js"></script>
     </body>
